--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -14,7 +14,7 @@
       <div class="col-sm-4">
         <a class="btn btn-danger" href="/logout" role="button">Log Out</a>
         <a class="btn btn-warning" onclick="alertfun()" role="button">Delete Account</a>
-        <a class="btn btn-danger" href="/deletePost" role="button">delete Post</a>
+        <a class="btn btn-danger" href="/deletePost" role="button">Delete Post</a>
       </div>
     </div>
     <div class="container">
